--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <div id="root" class="container-fluid">
     </div>
-    <script src="/static/bundle.js"></script>
+    <script src="./static/bundle.js"></script>
 </body>
 
 </html>
